--- a/catfe/src/main/webapp/pub/css/events.css
+++ b/catfe/src/main/webapp/pub/css/events.css
@@ -1,3 +1,7 @@
+.title {
+  font-size: 5rem;
+}
+
 .event-container {
   margin-top: 1rem;
   display: flex;
@@ -87,21 +91,24 @@
 }
 
 .rsvp-container {
+  font-family: "Blogger Sans", "Comfortaa", Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 5rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   width: 100%;
-  height: 900px;
-  background-color: rgb(197, 197, 197);
+  height: auto;
+  border-radius: 0.7rem;
 }
 .rsvp-container .rsvp-event-info {
+  display: flex;
+  flex-direction: column;
   margin: 1rem;
   padding: 1rem;
   flex-grow: 0.5;
   width: 100px;
-  height: 600px;
+  height: auto;
   background: rgb(156, 156, 156);
+  border-radius: 0.7rem;
 }
 .rsvp-container .rsvp-event-info .image-container {
   overflow: hidden;
@@ -115,22 +122,115 @@
   width: 100%;
   height: 100%;
 }
-.rsvp-container .rsvp-form {
+.rsvp-container .rsvp-event-info .text-container {
+  display: flex;
+  flex-direction: row;
+  background: rgb(244, 244, 244);
+  height: auto;
+  width: 100%;
+  border-radius: 1rem;
+  flex: 1;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+.rsvp-container .rsvp-event-info .text-container .rsvp-event-info-txt {
+  height: auto;
+  width: 100%;
+}
+.rsvp-container .rsvp-form-container {
   margin: 1rem;
   flex-grow: 1.1;
   width: 100px;
-  height: 600px;
-  background: rgb(156, 156, 156);
+  height: auto;
+  background: rgb(215, 215, 215);
+  border-radius: 0.7rem;
+}
+.rsvp-container .rsvp-form-container .rsvp-title-container {
+  text-align: center;
+  margin: 1rem;
+}
+.rsvp-container .rsvp-form-container #event-form {
+  margin: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  max-width: 400px;
+}
+.rsvp-container .rsvp-form-container #event-form #form-adoption-container {
+  margin: 1rem;
+}
+.rsvp-container .rsvp-form-container #event-form #form-adoption-container h3 {
+  font-size: 1rem;
+}
+.rsvp-container .rsvp-form-container #event-form #form-adoption-container .row {
+  margin: 1rem;
+}
+.rsvp-container .rsvp-form-container #event-form #alcohol-event {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: end;
+}
+.rsvp-container .rsvp-form-container #event-form .submit {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+}
+.rsvp-container .rsvp-form-container #event-form .submit .btn {
+  margin-top: 2rem;
+  background-color: rgb(216, 67, 67);
+  color: rgb(243, 242, 232);
 }
 .rsvp-container .rsvp-cat-info {
+  display: flex;
+  flex-direction: column;
   margin: 1rem;
+  padding: 1rem;
   flex-grow: 0.5;
   width: 100px;
-  height: 600px;
+  height: auto;
   background: rgb(156, 156, 156);
+  border-radius: 0.7rem;
+}
+.rsvp-container .rsvp-cat-info .image-container {
+  overflow: hidden;
+  height: auto;
+  width: 100%;
+  aspect-ratio: 2/1.5;
+  border-radius: 0.7rem;
+}
+.rsvp-container .rsvp-cat-info .image-container .cat-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.rsvp-container .rsvp-cat-info .text-container {
+  display: flex;
+  flex-direction: column;
+  background: rgb(244, 244, 244);
+  height: auto;
+  width: 100%;
+  border-radius: 1rem;
+  flex: 1;
+  margin-top: 1rem;
+}
+.rsvp-container .rsvp-cat-info .text-container .rsvp-cat-name, .rsvp-container .rsvp-cat-info .text-container .rsvp-date {
+  padding: 1rem;
+  padding-top: 1.2rem;
+  height: auto;
+  text-align: center;
+}
+.rsvp-container .rsvp-cat-info .text-container .rsvp-date {
+  font-size: 2rem;
+  color: rgb(216, 67, 67);
+}
+.rsvp-container .rsvp-cat-info #cat-name-container {
+  max-height: 4rem;
 }
 
 @media (width <= 768px) {
+  .title {
+    font-size: 3rem;
+  }
   .event-container {
     display: flex;
     flex-direction: column;
@@ -179,6 +279,27 @@
     text-align: center;
     text-justify: auto;
   }
+  .rsvp-container {
+    flex-direction: column;
+    margin-top: 1rem;
+  }
+  .rsvp-container .rsvp-event-info, .rsvp-container .rsvp-form-container, .rsvp-container .rsvp-cat-info {
+    width: 100%;
+    margin: 0;
+    margin-top: 1rem;
+  }
+  .rsvp-container .rsvp-form-container #event-form .submit {
+    display: flex;
+    justify-content: center;
+  }
+  .rsvp-container .rsvp-form-container #event-form .submit .btn {
+    margin: 1rem;
+    margin-bottom: 1.5rem;
+  }
+  .rsvp-container .rsvp-event-info .image-container, .rsvp-container .rsvp-cat-info .image-container {
+    height: 100px;
+    width: auto;
+  }
 }
 @media (769px <= width <= 1200px) {
   .event-container {
@@ -226,6 +347,31 @@
     border: none;
     text-align: center;
     text-justify: auto;
+  }
+  .rsvp-container {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  .rsvp-container .rsvp-event-info, .rsvp-container .rsvp-form-container, .rsvp-container .rsvp-cat-info {
+    width: 80%;
+    margin: 0;
+    margin-top: 1rem;
+  }
+  .rsvp-container .rsvp-form-container {
+    max-width: 600px;
+  }
+  .rsvp-container .rsvp-form-container #event-form .submit {
+    display: flex;
+    justify-content: center;
+  }
+  .rsvp-container .rsvp-form-container #event-form .submit .btn {
+    margin: 1rem;
+    margin-bottom: 1.5rem;
+  }
+  .rsvp-container .rsvp-event-info .image-container, .rsvp-container .rsvp-cat-info .image-container {
+    height: 100px;
+    width: auto;
   }
 }
 
