--- a/catfe/src/main/webapp/pub/css/cats.scss
+++ b/catfe/src/main/webapp/pub/css/cats.scss
@@ -1,4 +1,5 @@
-
+$container-clr: rgb(156, 99, 127);
+$text-bg: rgb(245, 235, 227);
 .cats-container {
     margin-top: 3rem;
     border-radius: .7rem;
@@ -7,7 +8,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     flex-direction: row;
-    background-color: rgb(186, 186, 186);
+    background-color: $container-clr;
     width: 100%;
     height: auto;
     min-height: 100px;
@@ -21,14 +22,15 @@
         justify-content: center;
         align-items: center;
         padding: 1rem;
+        
 
         .image-container{
             overflow: hidden;
-            background-color: rgb(200, 200, 200);
             width: 80%;
             height: auto;
             aspect-ratio: 1 / 1;
             border-radius: 100%;
+            border: 10px solid $text-bg;
             .cat-image {
 
                 object-fit: cover;
