--- a/catfe/src/main/webapp/pub/css/events.scss
+++ b/catfe/src/main/webapp/pub/css/events.scss
@@ -4,7 +4,8 @@
 
 
 
-
+$container-clr: rgb(131, 73, 101, 0.5);
+$text-bg: rgb(245, 235, 227);
 $action-clr: rgb(216, 67, 67);
 $action-txt: rgb(243, 242, 232);
 $spacing: 1.5rem;
@@ -34,14 +35,14 @@ $spacing: 1.5rem;
     a {
         text-decoration: none;
         letter-spacing: 1px;
-        color: $action-txt
+        color: $action-txt;
     }
 
 }
 
 .event-object-container {
 
-    background: rgb(215, 215, 215);
+    background: $container-clr;
     display: flex;
     height: auto;
     width: 90%;
@@ -57,12 +58,14 @@ $spacing: 1.5rem;
         margin: $spacing;
         margin-right: .5rem;
         height: 290px;
+        
         width: auto;
+        max-width: 274px;
         border-radius: .7rem;
 
         .event-image {
 
-            object-fit: contain;
+            object-fit: cover;
             width: 100%;
             height: 100%;
 
@@ -72,7 +75,7 @@ $spacing: 1.5rem;
     .text-container {
         display: flex;
         flex-direction: column;
-        background: rgb(244, 244, 244);
+        background: $text-bg;
         height: auto;
         border-radius: 1rem;
         padding: 1rem;
@@ -85,8 +88,8 @@ $spacing: 1.5rem;
             font-family:'Blogger Sans';
             font-weight: 500;
             letter-spacing: 1px;
-            width: 60%;
-            height: 2.5rem;
+            // width: 60%;
+            height: auto;
             margin: .6rem;
             margin-left: 0;
         }
@@ -152,7 +155,7 @@ $spacing: 1.5rem;
         flex-grow: .5;
         width: 100px;
         height: auto;
-        background: rgb(156, 156, 156);
+        background: $container-clr;
         border-radius: .7rem;
 
         .image-container {
@@ -174,7 +177,7 @@ $spacing: 1.5rem;
 
             display: flex;
             flex-direction: row;
-            background: rgb(244, 244, 244);
+            background: $text-bg;
             height: auto;
             width: 100%;
             border-radius: 1rem;
@@ -194,9 +197,9 @@ $spacing: 1.5rem;
         flex-grow: 1.1;
         width: 100px;
         height: auto;
-        background: rgb(215, 215, 215);
+        background: $text-bg;
         border-radius: .7rem;
-
+        border: 8px solid $container-clr;
         .rsvp-title-container {
 
             text-align: center;
@@ -231,6 +234,7 @@ $spacing: 1.5rem;
                 flex-direction: column;
                 .btn {
                     margin-top: 2rem;
+                    margin-bottom: 2rem;
                     background-color: $action-clr;
                     color: $action-txt;
                 }           
@@ -248,7 +252,7 @@ $spacing: 1.5rem;
         flex-grow: .5;
         width: 100px;
         height: auto;
-        background: rgb(156, 156, 156);
+        background: $container-clr;
         border-radius: .7rem;
 
         .image-container {
@@ -265,20 +269,20 @@ $spacing: 1.5rem;
                 height: 100%;
             }
         }
-        .text-container{
+        .text-container {
 
             display: flex;
             flex-direction: column;
-            background: rgb(244, 244, 244);
+            background: $text-bg;
             height: auto;
             width: 100%;
             border-radius: 1rem;
             flex: 1;
             margin-top: 1rem;
 
-            .rsvp-cat-name, .rsvp-date{
+            .rsvp-cat-name, .rsvp-date {
                 padding: 1rem;
-                padding-top:1.2rem;
+                padding-top: 1.2rem;
                 height: auto;
                 text-align: center;
             }
@@ -286,6 +290,12 @@ $spacing: 1.5rem;
             .rsvp-date {
                 font-size: 2rem;
                 color: $action-clr;
+            }
+            .rsvp-cat-name {
+                font-size: 1.5rem;
+                font-weight: bold;
+                position: relative;
+                top: -4px;
             }
         }
         #cat-name-container{
@@ -339,6 +349,7 @@ $spacing: 1.5rem;
         .image-container {
             margin: 15px;
             height: 80px;
+            max-width: 900px;
             width: 90%;
             border-radius: .7rem;
             .event-image {
