Added proper date formatting to events, and cat description on event form.

--- a/catfe/src/main/webapp/pub/css/account.css
+++ b/catfe/src/main/webapp/pub/css/account.css
@@ -30,6 +30,4 @@
 .login-form-container button:hover {
   background: rgb(221, 88, 70);
   color: rgb(255, 255, 255);
-}
-
-/*# sourceMappingURL=account.css.map */
+}/*# sourceMappingURL=account.css.map */
