--- a/catfe/src/main/webapp/pub/css/style.css
+++ b/catfe/src/main/webapp/pub/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .header {
-  background: radial-gradient(circle, rgb(240, 233, 246) 0%, rgb(221, 206, 242) 52%, rgb(209, 209, 240) 100%);
+  background: radial-gradient(circle, rgba(240, 233, 246, 0.4) 0%, rgba(221, 206, 242, 0.4) 52%, rgba(209, 209, 240, 0.4) 100%);
 }
 
 /*# sourceMappingURL=style.css.map */
