--- a/catfe/src/main/webapp/pub/css/table.css
+++ b/catfe/src/main/webapp/pub/css/table.css
@@ -62,6 +62,4 @@ table tbody tr:nth-child(even) {
 }
 table table {
   background-color: #ff33cc;
-}
-
-/*# sourceMappingURL=table.css.map */
+}/*# sourceMappingURL=table.css.map */
