--- a/catfe/src/main/webapp/pub/css/cats.css
+++ b/catfe/src/main/webapp/pub/css/cats.css
@@ -29,7 +29,8 @@
   border: 10px solid rgb(245, 235, 227);
 }
 .cats-container .cat-container .image-container .cat-image {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -43,6 +44,4 @@
   width: 100%;
   height: auto;
   border-radius: 0.7rem;
-}
-
-/*# sourceMappingURL=cats.css.map */
+}/*# sourceMappingURL=cats.css.map */
