--- a/catfe/src/main/webapp/pub/css/style.css
+++ b/catfe/src/main/webapp/pub/css/style.css
@@ -21,6 +21,4 @@ body {
 
 .header {
   background: radial-gradient(circle, rgba(240, 233, 246, 0.4) 0%, rgba(221, 206, 242, 0.4) 52%, rgba(209, 209, 240, 0.4) 100%);
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
