--- a/catfe/src/main/webapp/pub/css/cats.css
+++ b/catfe/src/main/webapp/pub/css/cats.css
@@ -6,7 +6,7 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   flex-direction: row;
-  background-color: rgb(156, 99, 127);
+  background-color: rgb(102, 69, 90);
   width: 100%;
   height: auto;
   min-height: 100px;
@@ -26,11 +26,10 @@
   height: auto;
   aspect-ratio: 1/1;
   border-radius: 100%;
-  border: 10px solid rgb(245, 235, 227);
+  border: 10px solid rgb(237, 242, 247);
 }
 .cats-container .cat-container .image-container .cat-image {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -40,8 +39,56 @@
   padding-bottom: 2rem;
   margin: 1rem;
   text-align: center;
-  background-color: rgb(216, 216, 216);
+  background-color: rgb(237, 242, 247);
   width: 100%;
   height: auto;
   border-radius: 0.7rem;
-}/*# sourceMappingURL=cats.css.map */
+}
+
+.cat-card {
+  display: flex;
+  flex-direction: row;
+  font-size: 2rem;
+  font-family: "Blogger Sans", "Comfortaa", "Verdana", sans-serif;
+  text-align: center;
+}
+.cat-card .container-1, .cat-card .container-2, .cat-card .container-3 {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+  background-color: rgb(237, 242, 247);
+  border-radius: 0.7rem;
+  border: 1.4rem rgb(102, 69, 90) solid;
+}
+.cat-card .container-1 {
+  width: auto;
+  padding-right: 20px;
+  height: 450px;
+}
+.cat-card .container-2 {
+  padding: 3rem;
+  width: 450px;
+  height: 450px;
+}
+.cat-card .container-3 {
+  width: 450px;
+  height: 450px;
+  text-align: left;
+  font-size: 1.3rem;
+  padding: 1.4rem;
+  line-height: 1.8rem;
+}
+.cat-card .container-3 .container-title {
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+}
+
+.container-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2rem;
+}
+
+/*# sourceMappingURL=cats.css.map */
