--- a/catfe/src/main/webapp/pub/css/form.css
+++ b/catfe/src/main/webapp/pub/css/form.css
@@ -30,6 +30,4 @@ form {
 .submit-btn:hover {
   background-color: #e16d6d;
   color: white;
-}
-
-/*# sourceMappingURL=form.css.map */
+}/*# sourceMappingURL=form.css.map */
