--- a/catfe/src/main/webapp/pub/css/style.css
+++ b/catfe/src/main/webapp/pub/css/style.css
@@ -21,4 +21,43 @@ body {
 
 .header {
   background: radial-gradient(circle, rgba(240, 233, 246, 0.4) 0%, rgba(221, 206, 242, 0.4) 52%, rgba(209, 209, 240, 0.4) 100%);
-}/*# sourceMappingURL=style.css.map */
+}
+
+.circle-grow {
+  flex-shrink: 0;
+  z-index: 2;
+  border: rgb(82, 82, 82) 1rem solid;
+  border-radius: 90%;
+  background-color: rgb(136, 136, 136);
+  transition: cubic-bezier(0.37, -0.02, 0.17, 0.88), 1s;
+}
+.circle-grow:hover {
+  transform: scale(1.15);
+}
+
+a {
+  color: #354a90;
+  letter-spacing: 1px;
+  text-decoration: none;
+  border-bottom: 2px solid;
+}
+a:hover {
+  color: #435db5;
+}
+
+.cat-page-image-container {
+  overflow: hidden;
+  margin: 1.5rem;
+  margin-right: 0.5rem;
+  height: 290px;
+  width: auto;
+  max-width: 274px;
+  border-radius: 0.7rem;
+}
+.cat-page-image-container .event-image, .cat-page-image-container .cat-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+/*# sourceMappingURL=style.css.map */
