Completed create and edit pages for events and cats.

--- a/catfe/src/main/webapp/pub/css/cats.css
+++ b/catfe/src/main/webapp/pub/css/cats.css
@@ -91,4 +91,13 @@
   padding: 2rem;
 }
 
+.radio {
+  display: flex;
+  justify-content: flex-start;
+}
+
+#description {
+  min-height: 110px;
+}
+
 /*# sourceMappingURL=cats.css.map */
