--- a/catfe/src/main/webapp/pub/css/style.scss
+++ b/catfe/src/main/webapp/pub/css/style.scss
@@ -58,7 +58,7 @@ a {
     color:#354a90;
     letter-spacing: 1px;
     text-decoration: none;
-    border-bottom: 2px solid;
+    // border-bottom: 2px solid;
     &:hover {
         color: lighten(#354a90, 10%);
     }
@@ -83,3 +83,5 @@ a {
 
     }
 }
+
+
