--- a/catfe/src/main/webapp/pub/css/landing.css
+++ b/catfe/src/main/webapp/pub/css/landing.css
@@ -1,8 +1,7 @@
 .hero {
   display: flex;
   justify-content: center;
-  margin-top: 15rem;
-  margin-left: 2rem;
+  margin-top: 4rem;
   /* background-color: rgb(238, 238, 238); */
   height: 30rem;
   width: 100vw;
@@ -15,7 +14,7 @@
 }
 .hero .text-container {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   margin: 2rem;
   margin-right: 16rem;
   background-color: rgb(204, 204, 204);
@@ -61,4 +60,29 @@
 }
 .cat-img:hover {
   transform: scale(1.15);
-}/*# sourceMappingURL=landing.css.map */
+}
+
+.hero-container {
+  display: flex;
+  align-items: flex-start;
+  background-image: url(../assets/imgs/landing/hero-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 25%;
+  height: 100vh;
+}
+.hero-container .hero-title {
+  width: 450px;
+  margin: 4rem;
+  margin-top: 7rem;
+  height: auto;
+  text-align: center;
+  padding: 1rem;
+  background: rgba(240, 241, 242, 0.596);
+  font-family: "Blogger Sans";
+  letter-spacing: 1px;
+  font-size: 4rem;
+  border-radius: 0.7rem;
+}
+
+/*# sourceMappingURL=landing.css.map */
