--- a/catfe/src/main/webapp/pub/css/landing.scss
+++ b/catfe/src/main/webapp/pub/css/landing.scss
@@ -7,8 +7,8 @@
 .hero {
     display: flex;
     justify-content: center;
-    margin-top: 15rem;
-    margin-left: 2rem;
+    margin-top: 4rem;
+    // margin-left: 2rem;
     /* background-color: rgb(238, 238, 238); */
     height: 30rem;
     width: 100vw;
@@ -22,7 +22,7 @@
     
     .text-container {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         margin: 2rem;
         margin-right: 16rem;
         background-color: rgb(204, 204, 204);
@@ -73,6 +73,42 @@
         transform: scale(1.15);
     }
     transition: cubic-bezier(.37,-0.02,.17,.88), 1s;
+
 }
+
+.hero-container {
+    display: flex;
+    align-items: flex-start;
+    background-image: url(../assets/imgs/landing/hero-img.jpg)  ;
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: 25%;
+    height: 100vh;
+
+    .hero-title {
+        width: 450px;
+        margin: 4rem;
+        margin-top: 7rem;
+        height: auto;
+        text-align: center;
+        padding: 1rem;
+        background: rgba(240, 241, 242, 0.596);
+        font-family:'Blogger Sans';
+        letter-spacing: 1px;
+        font-size: 4rem;
+        border-radius: 0.7rem;
+
+    }
+    // overflow: hidden;
+    // height: 80vh;
+    // width: 100%;
+    // .hero-img {
+    //     object-fit: cover;
+    //     width: 100%;
+    //     height: 100%;
+    //     position: relative;
+    // }
+}
+
 
 
