Edited carousel into Cat page.

--- a/catfe/src/main/webapp/pub/css/error.css
+++ b/catfe/src/main/webapp/pub/css/error.css
@@ -23,6 +23,4 @@
 .error-link a:hover {
   color: rgb(66, 124, 212);
   border-bottom: 1px rgb(93, 120, 207) solid;
-}
-
-/*# sourceMappingURL=error.css.map */
+}/*# sourceMappingURL=error.css.map */
