--- a/catfe/src/main/webapp/pub/css/form.css
+++ b/catfe/src/main/webapp/pub/css/form.css
@@ -34,6 +34,4 @@ form {
 
 .gender-radio {
   justify-content: flex-start;
-}
-
-/*# sourceMappingURL=form.css.map */
+}/*# sourceMappingURL=form.css.map */
