--- a/catfe/src/main/webapp/pub/css/cats.css
+++ b/catfe/src/main/webapp/pub/css/cats.css
@@ -1,3 +1,68 @@
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  width: 100%;
+  height: 500px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  transform-style: flat !important;
+}
+.swiper-slide .text-container {
+  border-radius: 0.7rem;
+  font-family: "Blogger Sans", "Comfortaa", "Verdana", sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-align: center;
+  background-color: rgb(237, 242, 247);
+  height: 80px;
+  width: 200px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: auto;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 90%;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  height: 70%;
+  object-fit: contain;
+  margin-bottom: 1rem;
+  border: 1rem solid rgb(237, 242, 247);
+}
+
+.swiper-container {
+  margin: 5rem;
+}
+
 .cats-container {
   margin-top: 3rem;
   border-radius: 0.7rem;
