--- a/catfe/src/main/webapp/pub/css/landing.css
+++ b/catfe/src/main/webapp/pub/css/landing.css
@@ -83,6 +83,4 @@
   letter-spacing: 1px;
   font-size: 4rem;
   border-radius: 0.7rem;
-}
-
-/*# sourceMappingURL=landing.css.map */
+}/*# sourceMappingURL=landing.css.map */
