--- a/catfe/src/main/webapp/pub/css/style.css
+++ b/catfe/src/main/webapp/pub/css/style.css
@@ -54,9 +54,8 @@ a:hover {
   border-radius: 0.7rem;
 }
 .cat-page-image-container .event-image, .cat-page-image-container .cat-image {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
