--- a/catfe/src/main/webapp/pub/css/style.scss
+++ b/catfe/src/main/webapp/pub/css/style.scss
@@ -35,6 +35,12 @@ body {
 
 }
 
+.swiper-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .header {
     background: $header-bg-clr;
 }
