--- a/catfe/src/main/webapp/pub/css/cats.css
+++ b/catfe/src/main/webapp/pub/css/cats.css
@@ -40,7 +40,7 @@ body {
   width: 200px;
 }
 
-.swiper-slide img {
+.swiper-slide-img {
   display: block;
   width: auto;
   height: 100%;
@@ -58,9 +58,8 @@ body {
   margin-bottom: 1rem;
   border: 1rem solid rgb(237, 242, 247);
 }
-
-.swiper-container {
-  margin: 5rem;
+.image-container a {
+  display: contents;
 }
 
 .cats-container {
