--- a/catfe/src/main/webapp/pub/css/account.css
+++ b/catfe/src/main/webapp/pub/css/account.css
@@ -1,10 +1,11 @@
 .login-form-container {
-  background: rgb(197, 197, 197);
+  background: rgb(102, 69, 90);
   margin-top: 5rem;
   max-width: 450px;
-  height: 350px;
+  height: auto;
   padding-top: 3rem;
   border-radius: 0.7rem;
+  box-shadow: 0px 2px 5px 0px rgb(81, 77, 80);
 }
 .login-form-container #login-form {
   display: flex;
@@ -12,11 +13,22 @@
   align-items: center;
   justify-content: center;
 }
+.login-form-container #login-form .separator {
+  height: 2px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+  width: 75%;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+}
 .login-form-container .form-group {
   margin: 0.7rem;
 }
 .login-form-container label {
   min-width: 260px;
+  color: white;
+  font-size: 1rem;
+  letter-spacing: 2px;
 }
 .login-form-container input {
   width: 100%;
@@ -24,10 +36,14 @@
 .login-form-container button {
   margin: auto;
   margin-top: 0.7rem;
+  margin-bottom: 3rem;
   background: rgb(216, 67, 67);
   color: rgb(243, 242, 232);
 }
 .login-form-container button:hover {
   background: rgb(221, 88, 70);
   color: rgb(255, 255, 255);
-}/*# sourceMappingURL=account.css.map */
+  box-shadow: 0px 0px 5px 5px rgba(244, 199, 114, 0.2);
+}
+
+/*# sourceMappingURL=account.css.map */
