--- a/catfe/src/main/webapp/pub/css/account.scss
+++ b/catfe/src/main/webapp/pub/css/account.scss
@@ -3,24 +3,36 @@ $action-txt: rgb(243, 242, 232);
 $spacing: 1.5rem;
 
 .login-form-container{
-    background:rgb(197, 197, 197);
+    background:rgb(102, 69, 90);
     margin-top: 5rem;
     max-width: 450px;
-    height: 350px;
+    height: auto;
     padding-top: 3rem;
     border-radius: 0.7rem;
+    box-shadow: 0px 2px 5px 0px rgb(81, 77, 80);
     #login-form{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        
+        .separator {
+            height: 2px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+            width: 75%;
+            background-color: rgba(0, 0, 0, 0.2);
+            margin-top: 2rem;
+            margin-bottom: .5rem;
+        }
     }
     .form-group {
         margin: .7rem;
     }
     label {
         min-width: 260px;
-        
+        color: white;
+        font-size: 1rem;
+        letter-spacing: 2px;
     }
     input {
         width: 100%;
@@ -28,11 +40,13 @@ $spacing: 1.5rem;
     button {
         margin: auto;
         margin-top: .7rem;
+        margin-bottom: 3rem;
         background: $action-clr;
         color: $action-txt;
         &:hover {
             background: rgb(221, 88, 70);
             color: rgb(255, 255, 255);
+            box-shadow: 0px 0px 5px 5px rgb(244, 199, 114, 0.2);
         }
         
     }
