--- a/catfe/src/main/webapp/pub/css/cats.scss
+++ b/catfe/src/main/webapp/pub/css/cats.scss
@@ -18,20 +18,22 @@ $text-bg: rgb(237, 242, 247);
     }
 
     .swiper {
-        width: 100%;
-        height: 500px;
+        //width: 100%;
+        //height: 500px;
     }
-
+    .swiper-btns {
+        //top:  -20px !important;
+    }
     .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 300px;
-        transform-style: flat !important;
+        //text-align: center;
+        //font-size: 18px;
+        //
+        //display: flex;
+        //flex-direction: column;
+        //justify-content: center;
+        //align-items: center;
+        //width: 300px;
+        //transform-style: flat !important;
         .text-container {
             border-radius: .7rem;
             font-family: 'Blogger Sans', 'Comfortaa', 'Verdana', sans-serif;
@@ -47,11 +49,11 @@ $text-bg: rgb(237, 242, 247);
     }
 
     .swiper-slide-img {
-        display: block;
-        width: auto;
-        height: 100%;
-        object-fit: contain;
-        border-radius: 90%;
+        //display: block;
+        //width: auto;
+        //height: 100%;
+        //object-fit: contain;
+        //border-radius: 90%;
     }
 
     .image-container {
@@ -92,21 +94,20 @@ $text-bg: rgb(237, 242, 247);
         padding: 1rem;
         
 
-        .image-container{
-            overflow: hidden;
-            width: 80%;
-            height: auto;
-            aspect-ratio: 1 / 1;
-            border-radius: 100%;
-            border: 10px solid $text-bg;
-            .cat-image {
-
-                object-fit: cover;
-                width: 100%;
-                height: 100%;
-
-            }
-        }
+        //.image-container{
+        //    overflow: hidden;
+        //    width: 80%;
+        //    height: auto;
+        //    aspect-ratio: 1 / 1;
+        //    border-radius: 100%;
+        //    border: 10px solid $text-bg;
+        //    .cat-image {
+        //        object-fit: cover;
+        //        width: 100%;
+        //        height: 100%;
+        //
+        //    }
+        //}
         .text-container{
             
             padding: 1rem;
@@ -123,7 +124,20 @@ $text-bg: rgb(237, 242, 247);
         
     }
 }
+.image-container{
+    overflow: hidden;
+    width: 80%;
+    height: auto;
+    aspect-ratio: 1 / 1;
+    border-radius: 100%;
+    border: 10px solid $text-bg;
+    margin: 0 !important;
+    .cat-image {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
 
+    }
 // Individual Cat Page
 
 .cat-card {
